<resources>
    <string name="app_name">Visitapp</string>
    <string name="dpto1">Finanzas</string>
    <string name="pregunta_dpto">¿A que departamento viene?</string>
    <string name="bienvenida">Bienvenido a Cáritas de Monterrey</string>
    <string name="logo_desc">logo de caritas</string>
    <string name="dpto2">Logistica</string>
    <string name="dpto3">Alimentos</string>
    <string name="notif_message">Notificacion enviada. Favor de esperar en recepción.</string>
    <string name="confirm">Confirmar</string>
    <string name="ops_principial">Escoja una opción</string>
    <string name="op_persona">Vengo a ver a una persona en particular</string>
    <string name="op_dpto">Sé a qué departamento vengo</string>
    <string name="op_ayuda">No se a qué departamento dirigirme</string>
    <string name="q_persona">¿Con quién desea reunirse?</string>
    <string name="person_filler">Nombre</string>
    <string name="continue">Continuar</string>
    <string name="mensaje_recepcion">Favor de dirigirse a recepción para recibir información</string>
</resources>