<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seleccion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo_desc"
            android:scaleType="centerInside"

            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/bienvenida"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/ops_principial"/>

        <Button
            android:id="@+id/bt_person"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/blue1"
            android:fontFamily="sans-serif"
            android:text="@string/op_persona"
            android:textAllCaps="false"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bt_department"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/blue2"
            android:fontFamily="sans-serif"
            android:text="@string/op_dpto"
            android:textAllCaps="false"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bt_help"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/blue3"
            android:fontFamily="sans-serif"
            android:text="@string/op_ayuda"
            android:textAllCaps="false"
            android:textSize="25sp" />


    </LinearLayout>
</ScrollView>